<resources>
    <string name="app_name">OM</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">This is second Hello blank fragment</string>
    <string name="menu_settings">Settings</string>
    <string name="message_write_error">Error Writing Message !</string>
    <string name="message_write_success">The information was successfully written to the tag!</string>
    <string name="message_write_progress">Writing to Tag..</string>
    <string name="message_tag_detected">NFC Tag Detected !</string>
    <string name="message_tag_notReadable">NFC Tag is not readable !</string>
    <string name="message_read_tag">Read from NFC Tag</string>
    <string name="message_write_tag">Write to NFC Tag</string>
    <string name="message_tap_tag">Tap the NFC Tag to your device !</string>
    <string name="hint_message">Message</string>
    <string name="lorem_3_sen">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="PaintingModeSelected">Painting mode selected</string>
    <string name="YouCanSelectObjects">You can select objects</string>
    <string name="ChangeBackgroundLines">Change background lines</string>
    <string name="TheTagIsEmpty">The tag is empty</string>
    <string name="TheMessageShouldNotBeBlank">The message should not be blank</string>
    <string name="PleaseWait">Please wait…</string>
    <string name="NoTextAvailable">No text available</string>
    <string name="path">In the path\u0020</string>
    <string name="saved">\u0020saved</string>
    <string name="NotSupportTheLanguage">Your device does not support the language you want</string>
    <string name="NoAccessToMemory">No access to memory</string>
    <string name="NoAccessToCamera">No access to camera</string>
    <string name="WebSite_Jin724">www.jin724.com</string>
    <string name="PatientReception">\u0020Patient reception</string>
    <string name="EnterIp">Please enter the IP server:</string>
    <string name="Action">action</string>
    <string name="Return">Return</string>
    <string name="PatientInformation">Patient information</string>
    <string name="PreviousRefers">Previous refers</string>
    <string name="prescriptions">prescriptions</string>
    <string name="Charts">Charts</string>
    <string name="Create">Create</string>
    <string name="scan">scan</string>
    <string name="HandwritingConverter">Handwriting converter</string>
    <string name="to_convert_the_handwriting_to_text_you_first_need_to_click_on_the_keyboard_selection_button_and_then_select_persian_google_handwriting_input_option">To convert the handwriting to text you first need to click on the keyboard selection button and then select \'Persian Google handwriting Input\' Option</string>
    <string name="keyboard_selection">Keyboard selection</string>
    <string name="try_your_handwriting">Try your handwriting!</string>
    <string name="hello">\u0020\u0020 hello</string>
    <string name="enter_the_patient_s_name_or_national_code">Enter the patient\'s name or national code</string>
    <string name="local">local</string>
    <string name="remote">remote</string>
    <string name="get_from">Get From:</string>
    <string name="smart_card">\u0020Smart card</string>
    <string name="write_to_tag">Write to tag</string>
    <string name="read_tag">read tag</string>
    <string name="characteristics">characteristics</string>
    <string name="Qr">Qr</string>
    <string name="color_silver">color silver</string>
    <string name="search_bg">search bg</string>
    <string name="separator">separator</string>
    <string name="bottom_bar">bottom bar</string>
    <string name="text_color">text color</string>
    <string name="search_text">search text</string>
    <string name="toolbar_text">toolbar text</string>
    <string name="toolbar_bg">toolbar bg</string>
    <string name="navigation">navigation</string>
    <string name="bg">bg</string>
    <string name="entrance">Entrance</string>
    <string name="save">Save</string>
    <string name="create">Create</string>
    <string name="this_is_first_fragment">This is first fragment</string>
    <string name="patient_name">Zhian Ahmad</string>
    <string name="national_code">National Code : 1234567890</string>
    <string name="disease_type_a_diabetes">Disease: Type A Diabetes</string>
    <string name="early_observations">Early observations:</string>
    <string name="vertigo">Vertigo</string>
    <string name="stomach_burning">Stomach burning</string>
    <string name="mild_diarrhea">Mild diarrhea</string>
    <string name="lethargy">Lethargy</string>
    <string name="sleepy">Sleepy</string>
    <string name="note">Note:</string>
    <string name="please_paste_the_tag_on_the_back_of_the_machine">Please paste the tag on the back of the machine</string>
    <string name="information_in_the_tag">Information in the tag:</string>
    <string name="on">On</string>
    <string name="please_enter_the_text_you_want_then_paste_the_tag_into_the_back_of_the_device">Please enter the text you want, then paste the tag into the back of the device</string>
    <string name="name">Name</string>
    <string name="special_disease">special disease</string>
    <string name="please_wait">please wait ...</string>
    <string name="text">text</string>
    <string name="text_icon">text icon</string>
    <string name="outlined">outlined</string>
    <string name="icon">icon</string>
    <string name="dialog_icon">dialog icon</string>
    <string name="outline_icon">outline icon</string>
    <string name="unelevated">unelevated</string>
    <string name="unelevated_icon">unelevated icon</string>
    <string name="this_is_hint_text">this is hint text</string>
    <string name="patients_information_is_listed_as_soon_as_it_is_searched">Patients information is listed as soon as it is searched</string>
    <string name="edit">Edit</string>
    <string name="share">share</string>
    <string name="change_ip">Change Ip</string>
    <string name="qr_nfc">\u0020Qr / NFC</string>
    <string name="handwriting_converter">\u0020Handwriting converter</string>
    <string name="prescribe">\u0020Prescribe</string>
    <string name="voice_recording">\u0020Voice recording</string>
    <string name="clean">clean</string>
    <string name="erase">erase</string>
    <string name="undo">undo</string>
    <string name="redo">redo</string>
    <string name="text_size">text size</string>
    <string name="color">color</string>
    <string name="insert">insert</string>
    <string name="change_language">Change Language</string>
    <string name="no_support_NFC">sorry. this device does\'nt support NFC</string>

</resources>
