<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton4"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/text"
        app:layout_constraintEnd_toStartOf="@+id/materialButton3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton3"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_icon"
        app:icon="@drawable/ic_home"
        app:layout_constraintBaseline_toBaselineOf="@+id/materialButton4"
        app:layout_constraintEnd_toStartOf="@+id/materialButton5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/materialButton4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton8"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/outlined"
        app:layout_constraintBaseline_toBaselineOf="@+id/materialButton7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/materialButton7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton6"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="dialog"
        app:layout_constraintBaseline_toBaselineOf="@+id/materialButton5"
        app:layout_constraintEnd_toStartOf="@+id/materialButton7"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/materialButton5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton5"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/icon"
        app:icon="@drawable/ic_home"
        app:layout_constraintBaseline_toBaselineOf="@+id/materialButton3"
        app:layout_constraintEnd_toStartOf="@+id/materialButton6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/materialButton3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton7"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_icon"
        app:icon="@drawable/ic_home"
        app:layout_constraintBaseline_toBaselineOf="@+id/materialButton6"
        app:layout_constraintEnd_toStartOf="@+id/materialButton8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/materialButton6" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton10"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/outline_icon"
        app:icon="@drawable/ic_home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialButton4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton11"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/unelevated"
        app:layout_constraintStart_toEndOf="@+id/materialButton10"
        app:layout_constraintTop_toBottomOf="@+id/materialButton3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton12"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/unelevated_icon"
        app:icon="@drawable/ic_home"
        app:layout_constraintStart_toEndOf="@+id/materialButton11"
        app:layout_constraintTop_toBottomOf="@+id/materialButton3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <com.google.android.material.circularreveal.cardview.CircularRevealCardView
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline1"
        app:layout_constraintStart_toEndOf="@+id/materialCardView"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.27" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:helperTextEnabled="true"
        app:hintEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:boxBackgroundColor="@color/purple"
        app:boxCornerRadiusTopStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline1">

        <com.google.android.material.textfield.TextInputEditText
            android:hint="@string/this_is_hint_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_margin="16dp"
        android:src="@drawable/ic_home"
        app:backgroundTint="@color/purple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>